--- a/.github/workflows/request_combinations.yml
+++ b/.github/workflows/request_combinations.yml
@@ -22,4 +22,4 @@ jobs:
 
     - name: Run script
       run: |
-        python script.py  # Выполнить ваш Python-скрипт
+        python -u script.py  # Выполнить ваш Python-скрипт
